navbar and forms vertical alignment fix

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,7 +11,7 @@
     .nav-links-custom{
         width: 100vw;
         margin: 0;
-        padding-right: 20px;
+        padding-right: 40px;
         display: flex;
         align-items: flex-end;
     }
